# attest

./: .gitignore  Cargo.toml  README.md  action.yml  attest.toml
.attest/: baseline.json
.claude/: settings.json
.github/homebrew/: formula.rb.tmpl
.github/scoop/: attest.json.tmpl
.github/workflows/: ci.yml  release.yml
corpus/: README.md  candidate-distribution.json  candidates.jsonl  guard-cases.jsonl  report.md  reviewed.jsonl
crates/attest-cli/: Cargo.toml
crates/attest-cli/data/: tools.json
crates/attest-cli/src/: check.rs  config.rs  extract.rs  facts.rs  glob.rs  llm.rs  main.rs  prose.rs  render.rs  store.rs  surface.rs  testutil.rs  vouch.rs
crates/attest-core/: Cargo.toml
crates/attest-core/src/: engine.rs  extract.rs  facts.rs  glob.rs  guard.rs  lib.rs  model.rs  skill.rs
crates/attest-core/src/resolve/: command.rs  config_key.rs  env.rs  go_import.rs  mod.rs  package.rs  path.rs  script.rs  symbol.rs
demo/attest-fix/: AGENTS.stale.md  attest-fix.cast  (+2 more)
docs/: 00-vision.md  01-design.md  02-roadmap.md  03-probe-2026-07-09.md  04-implementation-status.md  README.md  demo-attest-fix.md  release.md  tool-table.md
reports/: cold-start-validation.json  cold-start-validation.md  completion-audit.md  launch-post.md  owned-repository-validation.json  owned-repository-validation.md  public-scan.json  public-scan.md  reviewed-findings.md  upstream-submissions.json
tools/: mine-drift.py  prepare_upstream_pr.py  render_release_template.py  scan-repos.py  scan_owned_repos.py  test_demo_recording.py  test_distribution.py  test_mine_drift.py  test_render_release_template.py  test_report_evidence.py  test_scan_owned_repos.py  test_scan_repos.py  test_validate_release.py  validate_release.py
(+23 files in other folders)
