[workspace]
members = ["crates/attest-core", "crates/attest-cli"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/harrisonwang/attest"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
pulldown-cmark = "0.9.6"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"
hex = "0.4.3"
toml = "1.1.0"
walkdir = "2.5.0"
tempfile = "3.27.0"
