[package]
name = "attest-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pulldown-cmark.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true

[dev-dependencies]
serde_json.workspace = true
